--- a/static-Web/styles.css
+++ b/static-Web/styles.css
@@ -4,6 +4,10 @@
     font-family: 'Roboto Condensed', sans-serif;
     font-weight: 400;
 }
+
+body{
+    background-color: rgb(20, 20, 20);
+}
 section{
     z-index: 1;
 }
@@ -77,16 +81,111 @@ li , a {
 
 /* DREAM TEAM */
 .card{
-    margin: 15px;
+    display: flex;
+    width: calc(100% - 130px);
+    height: 500px;
+    gap: 20px;
+    justify-content: space-around;
     margin-top: 100px;
+    margin-left: 25px;
+    margin-right: 25px;
     padding: 40px;
-    background-color: rgb(20, 20, 20);
+    background-image: url(../hexagon-ball.svg);
+    background-position: center;
+    background-repeat: repeat;
+    background-size: 10%;
+    background-color: whitesmoke;
     border-radius: 5px;
+}
+
+.card div{
+    display: flex;
+    gap: 20px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width:  calc(100% / 3);
+    height: 100%;
+    background-color: rgba(159, 194, 140, 0.9);
+    border-radius: 20px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.card div h1{
+    font-weight: bold;
+    font-size: 35px;
+}
+
+.card div p{
+    font-size: 20px;
 }
 
 .white-text{
     color: whitesmoke;
 }
+
+#download{
+position: relative;
+width: calc(100% -100px);
+background-color: rgb(20, 20, 20);
+display: flex;
+justify-content: center;
+align-items: center;
+padding: 50px;
+}
+
+#downloadCard{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: whitesmoke;
+    border-radius: 20px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    width: 80%;
+    height: 100%;
+    padding: 50px;
+}
+
+#phoneContainer{
+width: 50%;
+height: 100%;
+}
+
+#phoneContainer img{
+ width: 250px;
+}
+
+#downloadOptions{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    height: 200px;
+    border-radius: 20px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    background-color: rgba(159, 194, 140, 0.9);
+}
+
+#downloadOptions button{
+    width: 70%;
+    height: 60px;
+    outline: none;
+    background-color: rgb(20, 20, 20);
+    color: whitesmoke;
+    font-weight: bold;
+    font-size: 25px;
+    border: transparent;
+    border-radius: 20px;
+    cursor: pointer;
+}
+
+
+
+
+
 
 /* ANIMATIONS */
 @keyframes start{
